--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
 <header class="site-header">
   <div class="header-inner">
-    <div class="logo-area"><img src="./assets/logo-placeholder.png"></div>
+    <div class="logo-area"><img src="logo.png"></div>
     <nav class="main-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
