--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="site-header">
     <div class="header-inner">
       <div class="logo-area">
-        <img id="site-logo" src="./assets/logo-placeholder.png" alt="logo">
+        <img id="site-logo" src="logo.png" alt="logo">
       </div>
       <nav class="main-nav">
         <ul>
